--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -10,7 +10,8 @@
     <!-- <script src="operator.js"></script> -->
     <!-- <script src="function.js"></script> -->
     <!-- <script src="class.js"></script> -->
-    <script src="object.js"></script>
+    <!-- <script src="object.js"></script> -->
+    <script src="array.js"></script>
 </head>
 <body>
 
