--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -11,7 +11,8 @@
     <!-- <script src="function.js"></script> -->
     <!-- <script src="class.js"></script> -->
     <!-- <script src="object.js"></script> -->
-    <script src="array.js"></script>
+    <!-- <script src="array.js"></script> -->
+    <script src="array-api.js"></script>
 </head>
 <body>
 
