--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -12,7 +12,8 @@
     <!-- <script src="class.js"></script> -->
     <!-- <script src="object.js"></script> -->
     <!-- <script src="array.js"></script> -->
-    <script src="array-api.js"></script>
+<!--    <script src="array-api.js"></script>-->
+    <script src="json.js"></script>
 </head>
 <body>
 
